--- a/index.html
+++ b/index.html
@@ -2,9 +2,32 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"-->
         <title>Mi sitio Web</title>
     </head>
     <body>
         Esta es la versión inicial de mi sitio web, Humberto
+
+        <h1>MISION:</h1>
+        <p>
+        Brindar educación superior de calidad, ofrecer servicios educativos especializados, participar en el <i>desarrollo</i> económico y social de la comunidad, mantener acciones socialmente responsables.
+        </p>
+
+        <h1>VISION:</h1>
+        <p>
+        Ser reconocidos como la mejor <strong>Universidad</strong> privada por su excelencia académica e innovación educativa, ofreciendo a su comunidad alternativas de superación profesional, formando seres humanos que con pasión construyan un <mark>mundo mejor</mark>.
+        </p>
+
+        <h2>Maestrías</h2>
+        <ul>
+            <li>Maestría en administración de instituciones educativas</li>
+            <li>Maestría en formación docente</li>
+            <li>Maestría en innovación para el desarrollo empresarial</li>
+            <li>Maestría en criminología, política criminal y ciencias de la seguridad</li>
+        </ul>
+
+        <a href="https://www.uniceq.edu.mx">Ver mas</a>
+
     </body>
 </html>
