Propuesta para modificar el repositorio de Humberto

--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
 
         <a class="button is-success" href="https://www.uniceq.edu.mx">Ver mas</a>
 
+        <p>Modificacion simple propuesta por Humberto</p>
+
     </body>
 </html>
