Segunda modificación propuesta

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         <a class="button is-success" href="https://www.uniceq.edu.mx">Ver mas</a>
 
         <p>Modificacion simple propuesta por Humberto</p>
-
+	<p>Segunda modificación propuesta por Humberto</p>
     </body>
 </html>
