--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title">Humberto</h1>
-                    <h2 class="subtitle">Soy profesor en la Universidad Central de Queretaro impartiendo las materias de Auditoria y Seguridad en Informatica y Software Abierto.</h2>
-                    <a class="button" href="/contacto">Contacto</a>
-                    <a class="button" href="/portafolio">Portafolio</a>
+                    <h2 class="subtitle">Hola!, Soy profesor en la Universidad Central de Queretaro impartiendo las materias de Auditoria y Seguridad en Informatica y Software Abierto.</h2>
+                    <a class="button" href="/test/contacto">Contacto</a>
+                    <a class="button" href="/test/portafolio">Portafolio</a>
                 </div>
             </div>
         </section>
